--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  /* color: red; */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +11,53 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background-color 0.3s, color 0.3s;
+}
+
+button {
+  background-color: var(--btn-bg);
+  color: var(--btn-color);
+  /* padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s; */
+}
+
+input {
+  background-color: var(--input-bg);
+  color: var(--input-color);
+  /* border: 1px solid var(--input-border); */
+}
+
+/* index.css */
+:root[data-theme='light'] {
+  --bg-color: #ffffff;
+  --text-color: #000000;
+
+  --btn-bg: #007bff;
+  --btn-color: #ffffff;
+
+  --input-bg: #f0f0f0;
+  --input-color: #000000;
+  --input-border: #cccccc;
+}
+
+:root[data-theme='dark'] {
+  --bg-color: #121212;
+  --text-color: #fffbfb;
+
+  --btn-bg: #66eb1f;
+  --btn-color: #180c0c;
+
+  --bg-contener:#534d4d;
+
+  --input-bg: #0c0a0a;
+  --input-color: #ffffff;
+  --input-border: #444444;
 }
