--- a/src/Style/AdmainReg.css
+++ b/src/Style/AdmainReg.css
@@ -65,3 +65,34 @@ form button:hover,
     color: red;
     font-size: 14px;
 }
+.input-icon-a {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    padding: 6px 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.input-icon-a .icon-a {
+    margin-right: 10px;
+    color: #555;
+}
+
+.input-icon-a input {
+    border: none;
+    outline: none;
+    flex: 1;
+    font-size: 16px;
+}
+
+.success-message {
+    color: green;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.error {
+    color: red;
+    font-size: 14px;
+}
